# RampContractFoldes

./: .gitignore  .gitmodules  Makefile  README.md  act.sh  build_all.sh  install_deps.sh  supra_history
.github/workflows/: ci.yml
RampAptos/: .env  .gitignore  Move.toml  README.md  obj.txt
RampAptos/deploy/: deploy.sh  run_script.sh  script.mv  upgrade.sh
RampAptos/doc/: ramp.md
RampAptos/sources/: add_asset.move  ramp.move  test_token.move
RampAptos/tests/: test_ramp.move
RampSol/: .gitignore  README.md  deployments.toml  foundry.toml  remappings.txt
RampSol/deploy/: deploy.sh  deploy_hedera.sh  deploy_lib.sh  deploy_lib_hedera.sh  deploy_token.sh  deploy_token_hedera.sh  upgrade.sh  verify.sh
RampSol/run/: add_asset_sepolia.sh  deposit_native.sh  mint.sh  mint_sepolia.sh  onram_native.sh  onramp_native_hedera.sh  run_add_asset.sh  run_deposit.sh  run_deposit_seploia.sh
RampSol/script/: 01_Deploy.s.sol  02_DeployToken.s.sol  03_DeployRampHedera.sol  04_DeployHederaToken.sol  05_mint_tokens.s.sol  05_mint_tokens.sol  06_upgrade.sol  Counter.s.sol
RampSol/src/: IRampContract.sol  RampContract.sol
RampSol/src/helpers/: errors.sol
RampSol/src/test_contract/: TestToken.sol
RampSol/test/: RampContract.sol  RampContractState.sol
RampSup/: .gitignore  Move.toml  README.md
RampSup/doc/: ramp.md
RampSup/sources/: ramp.move
ramp_solana/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
ramp_solana/.cargo/: config.toml
ramp_solana/examples/: add_asset.rs  add_asset_2022.rs  create_metadata.rs  create_token.rs  create_token_2022.rs  initialize_program.rs  mint.rs  mint_2022.rs  off_ramp.rs  off_ramp_deposit_2022.rs  off_ramp_native.rs  onramp.rs  onramp_native.rs
ramp_solana/src/: errors.rs  lib.rs  processors.rs  state.rs
ramp_solana/src/instructions/: add_asset_2022.rs  add_assets.rs  initialize_program.rs  mod.rs  off_ramp_deposit.rs  off_ramp_deposit_native.rs  off_ramp_deposit_token22.rs  onramp_withdraw.rs  onramp_withdraw_native.rs  remove_assets.rs  set_active.rs  set_asset_fee.rs  set_native_fee_percentage.rs  set_owner.rs  token_transfers.rs
ramp_solana/src/models/: mod.rs  off_ramp_models.rs
ramp_stark/: README.md  Scarb.toml
ramp_stark/deploy/: add_asset.sh  aprove.sh  declare.sh  declare_token.sh  deploy.sh  deploy_token.sh  deposit.sh  mint.sh  upgrade.sh
ramp_stark/src/: errors.cairo  interfaces.cairo  lib.cairo  ramp.cairo  token.cairo
ramp_stark/src/interfaces/: ramp_interface.cairo
ramp_stark/tests/: test_contract.cairo  test_ramps.cairo
ramp_stellar/: .gitignore  README.md
ramp_stellar/contracts/ramp-stellar/: Cargo.toml
ramp_stellar/contracts/ramp-stellar/src/: errors.rs  events.rs  lib.rs  test.rs  utils.rs
