[package]
name = "ramp_solana"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.7"
thiserror = "2.0.12"
base64 = "0.22.1"

# Solana and SPL dependencies
solana-program = "3.0.0"
solana-system-interface = "2.0.0"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-interface = "2.0.0"
spl-associated-token-account-interface = "2.0.0"
spl-token-metadata-interface = "0.8.0"
mpl-token-metadata = "5.1.1"
spl-token-2022 = {version = "9.0.0", features = ["no-entrypoint"]}
spl-token-2022-interface = "2.1.0"

[dev-dependencies]
solana-program-test = "3.0.0"
solana-sdk = "3.0.0"
solana-client = "3.0.0"
solana-commitment-config = "3.0.0"
tokio = "1.46.1"
once_cell = "1.21.3"
anyhow = "1.0.100"
dotenv = "0.15.0"


#binaries
[[example]]
name = "create_token"
path = "examples/create_token.rs"

[example.dev-dependencies]
ramp_solana = { path = "../ramp_solana" }

[[example]]
name = "initialize_program"
path = "examples/initialize_program.rs"

[[example]]
name = "add_asset"
path = "examples/add_asset.rs"

[[example]]
name = "mint"
path = "examples/mint.rs"