[package]
name = "ramp-stellar"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-access = "0.4.1"
stellar-contract-utils = "0.4.1"
stellar-macros = "0.4.1"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
